--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Angela's Blog</h1>
-            <span class="subheading">A collection of random musings.</span>
+            <h1>Test Blog</h1>
+            <span class="subheading">Just a test of  Flask blog app</span>
           </div>
         </div>
       </div>
